--- a/BWM.ipynb
+++ b/BWM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +138,12 @@
       "Sampling:   0%\n",
       "Sampling:   2% (100/6000)\n",
       "Sampling:   3% (200/6000)\n",
-      "Sampling:   5% (300/6000)\n",
-      "Sampling:  12% (700/6000)\n",
-      "Sampling:  20% (1200/6000)\n",
-      "Sampling:  28% (1700/6000)\n",
-      "Sampling:  53% (3200/6000)\n",
-      "Sampling:  77% (4600/6000)\n",
+      "Sampling:   7% (400/6000)\n",
+      "Sampling:  17% (1000/6000)\n",
+      "Sampling:  27% (1600/6000)\n",
+      "Sampling:  35% (2100/6000)\n",
+      "Sampling:  57% (3400/6000)\n",
+      "Sampling:  78% (4700/6000)\n",
       "Sampling: 100% (6000/6000)\n",
       "Sampling: 100% (6000/6000), done.\n",
       "Messages received during sampling:\n",
@@ -154,15 +154,15 @@
       "  Exception: dirichlet_lpdf: prior sample sizes[2] is nan, but must be positive! (in '/var/folders/yg/6v5nv1f56wj23g741x_8qpr40000gn/T/httpstan_3t9_tmuz/model_zz3o6ikf.stan', line 33, column 16 to column 50)\n",
       "  If this warning occurs sporadically, such as for highly constrained variable types like covariance matrices, then the sampler is fine,\n",
       "  but if this warning occurs often then your model may be either severely ill-conditioned or misspecified.\n",
-      "  Gradient evaluation took 0.000102 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 1.02 seconds.\n",
+      "  Gradient evaluation took 9.9e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.99 seconds.\n",
       "  Adjust your expectations accordingly!\n",
       "  Informational Message: The current Metropolis proposal is about to be rejected because of the following issue:\n",
       "  Exception: dirichlet_lpdf: prior sample sizes[3] is nan, but must be positive! (in '/var/folders/yg/6v5nv1f56wj23g741x_8qpr40000gn/T/httpstan_3t9_tmuz/model_zz3o6ikf.stan', line 33, column 16 to column 50)\n",
       "  If this warning occurs sporadically, such as for highly constrained variable types like covariance matrices, then the sampler is fine,\n",
       "  but if this warning occurs often then your model may be either severely ill-conditioned or misspecified.\n",
-      "  Gradient evaluation took 0.000105 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 1.05 seconds.\n",
+      "  Gradient evaluation took 9.3e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.93 seconds.\n",
       "  Adjust your expectations accordingly!\n",
       "  Informational Message: The current Metropolis proposal is about to be rejected because of the following issue:\n",
       "  Exception: dirichlet_lpdf: prior sample sizes[1] is 0, but must be positive! (in '/var/folders/yg/6v5nv1f56wj23g741x_8qpr40000gn/T/httpstan_3t9_tmuz/model_zz3o6ikf.stan', line 33, column 16 to column 50)\n",
@@ -178,9 +178,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html>\n",
+       "    <head>\n",
+       "        <meta charset=\"utf-8\">\n",
+       "        \n",
+       "            <script src=\"lib/bindings/utils.js\"></script>\n",
+       "            <link rel=\"stylesheet\" href=\"lib/vis-9.1.2/vis-network.css\" type=\"text/css\" />\n",
+       "            <script type=\"text/javascript\" src=\"lib/vis-9.1.2/vis-network.min.js\"></script>\n",
+       "            \n",
+       "        \n",
+       "<center>\n",
+       "<h1></h1>\n",
+       "</center>\n",
+       "\n",
+       "<!-- <link rel=\"stylesheet\" href=\"../node_modules/vis/dist/vis.min.css\" type=\"text/css\" />\n",
+       "<script type=\"text/javascript\" src=\"../node_modules/vis/dist/vis.js\"> </script>-->\n",
+       "        <!-- <link\n",
+       "          href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css\"\n",
+       "          rel=\"stylesheet\"\n",
+       "          integrity=\"sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6\"\n",
+       "          crossorigin=\"anonymous\"\n",
+       "        />\n",
+       "        <script\n",
+       "          src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js\"\n",
+       "          integrity=\"sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf\"\n",
+       "          crossorigin=\"anonymous\"\n",
+       "        ></script> -->\n",
+       "\n",
+       "\n",
+       "        <center>\n",
+       "          <h1></h1>\n",
+       "        </center>\n",
+       "        <style type=\"text/css\">\n",
+       "\n",
+       "             #mynetwork {\n",
+       "                 width: 600px;\n",
+       "                 height: 800px;\n",
+       "                 background-color: #ffffff;\n",
+       "                 border: 1px solid lightgray;\n",
+       "                 position: relative;\n",
+       "                 float: left;\n",
+       "             }\n",
+       "\n",
+       "             \n",
+       "\n",
+       "             \n",
+       "\n",
+       "             \n",
+       "        </style>\n",
+       "    </head>\n",
+       "\n",
+       "\n",
+       "    <body>\n",
+       "        <div class=\"card\" style=\"width: 100%\">\n",
+       "            \n",
+       "            \n",
+       "            <div id=\"mynetwork\" class=\"card-body\"></div>\n",
+       "        </div>\n",
+       "\n",
+       "        \n",
+       "        \n",
+       "\n",
+       "        <script type=\"text/javascript\">\n",
+       "\n",
+       "              // initialize global variables.\n",
+       "              var edges;\n",
+       "              var nodes;\n",
+       "              var allNodes;\n",
+       "              var allEdges;\n",
+       "              var nodeColors;\n",
+       "              var originalNodes;\n",
+       "              var network;\n",
+       "              var container;\n",
+       "              var options, data;\n",
+       "              var filter = {\n",
+       "                  item : '',\n",
+       "                  property : '',\n",
+       "                  value : []\n",
+       "              };\n",
+       "\n",
+       "              \n",
+       "\n",
+       "              \n",
+       "\n",
+       "              // This method is responsible for drawing the graph, returns the drawn network\n",
+       "              function drawGraph() {\n",
+       "                  var container = document.getElementById('mynetwork');\n",
+       "\n",
+       "                  \n",
+       "\n",
+       "                  // parsing and collecting nodes and edges from the python\n",
+       "                  nodes = new vis.DataSet([{\"color\": \"#97c2fc\", \"id\": \"3\", \"label\": \"C4\", \"shape\": \"dot\", \"size\": 21.88976910268194, \"title\": \"C4\", \"x\": 0, \"y\": 0}, {\"color\": \"#97c2fc\", \"id\": \"0\", \"label\": \"C1\", \"shape\": \"dot\", \"size\": 20.35403783187168, \"title\": \"C1\", \"x\": 0, \"y\": 200}, {\"color\": \"#97c2fc\", \"id\": \"1\", \"label\": \"C2\", \"shape\": \"dot\", \"size\": 17.10761026023154, \"title\": \"C2\", \"x\": 0, \"y\": 400}, {\"color\": \"#97c2fc\", \"id\": \"5\", \"label\": \"C6\", \"shape\": \"dot\", \"size\": 13.013218057299222, \"title\": \"C6\", \"x\": 0, \"y\": 600}, {\"color\": \"#97c2fc\", \"id\": \"4\", \"label\": \"C5\", \"shape\": \"dot\", \"size\": 10, \"title\": \"C5\", \"x\": 0, \"y\": 800}, {\"color\": \"#97c2fc\", \"id\": \"7\", \"label\": \"C8\", \"shape\": \"dot\", \"size\": 10, \"title\": \"C8\", \"x\": 0, \"y\": 1000}, {\"color\": \"#97c2fc\", \"id\": \"2\", \"label\": \"C3\", \"shape\": \"dot\", \"size\": 10, \"title\": \"C3\", \"x\": 0, \"y\": 1200}, {\"color\": \"#97c2fc\", \"id\": \"6\", \"label\": \"C7\", \"shape\": \"dot\", \"size\": 10, \"title\": \"C7\", \"x\": 0, \"y\": 1400}]);\n",
+       "                  edges = new vis.DataSet([{\"arrows\": \"to\", \"from\": \"3\", \"label\": \"0.6699999999999999\", \"to\": \"0\"}, {\"arrows\": \"to\", \"from\": \"3\", \"label\": \"0.91\", \"to\": \"1\"}, {\"arrows\": \"to\", \"from\": \"0\", \"label\": \"0.84\", \"to\": \"1\"}, {\"arrows\": \"to\", \"from\": \"0\", \"label\": \"0.99\", \"to\": \"5\"}, {\"arrows\": \"to\", \"from\": \"1\", \"label\": \"0.92\", \"to\": \"5\"}, {\"arrows\": \"to\", \"from\": \"5\", \"label\": \"0.95\", \"to\": \"4\"}, {\"arrows\": \"to\", \"from\": \"5\", \"label\": \"0.99\", \"to\": \"7\"}, {\"arrows\": \"to\", \"from\": \"4\", \"label\": \"0.84\", \"to\": \"7\"}, {\"arrows\": \"to\", \"from\": \"4\", \"label\": \"0.9299999999999999\", \"to\": \"2\"}, {\"arrows\": \"to\", \"from\": \"4\", \"label\": \"0.97\", \"to\": \"6\"}, {\"arrows\": \"to\", \"from\": \"7\", \"label\": \"0.73\", \"to\": \"2\"}, {\"arrows\": \"to\", \"from\": \"7\", \"label\": \"0.83\", \"to\": \"6\"}, {\"arrows\": \"to\", \"from\": \"2\", \"label\": \"0.65\", \"to\": \"6\"}]);\n",
+       "\n",
+       "                  nodeColors = {};\n",
+       "                  allNodes = nodes.get({ returnType: \"Object\" });\n",
+       "                  for (nodeId in allNodes) {\n",
+       "                    nodeColors[nodeId] = allNodes[nodeId].color;\n",
+       "                  }\n",
+       "                  allEdges = edges.get({ returnType: \"Object\" });\n",
+       "                  // adding nodes and edges to the graph\n",
+       "                  data = {nodes: nodes, edges: edges};\n",
+       "\n",
+       "                  var options = {\n",
+       "    \"configure\": {\n",
+       "        \"enabled\": false\n",
+       "    },\n",
+       "    \"edges\": {\n",
+       "        \"color\": {\n",
+       "            \"inherit\": true\n",
+       "        },\n",
+       "        \"smooth\": {\n",
+       "            \"enabled\": true,\n",
+       "            \"type\": \"curvedCW\"\n",
+       "        }\n",
+       "    },\n",
+       "    \"interaction\": {\n",
+       "        \"dragNodes\": true,\n",
+       "        \"hideEdgesOnDrag\": false,\n",
+       "        \"hideNodesOnDrag\": false\n",
+       "    },\n",
+       "    \"physics\": {\n",
+       "        \"enabled\": false,\n",
+       "        \"stabilization\": {\n",
+       "            \"enabled\": true,\n",
+       "            \"fit\": true,\n",
+       "            \"iterations\": 1000,\n",
+       "            \"onlyDynamicEdges\": false,\n",
+       "            \"updateInterval\": 50\n",
+       "        }\n",
+       "    }\n",
+       "};\n",
+       "\n",
+       "                  \n",
+       "\n",
+       "\n",
+       "                  \n",
+       "\n",
+       "                  network = new vis.Network(container, data, options);\n",
+       "\n",
+       "                  \n",
+       "\n",
+       "                  \n",
+       "\n",
+       "                  \n",
+       "\n",
+       "\n",
+       "                  \n",
+       "\n",
+       "                  return network;\n",
+       "\n",
+       "              }\n",
+       "              drawGraph();\n",
+       "        </script>\n",
+       "    </body>\n",
+       "</html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import HTML,display\n",
     "\n",
@@ -189,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
